SET( LIBHELLO_SRC hello.cpp )
ADD_LIBRARY( hello SHARED ${LIBHELLO_SRC} )
ADD_LIBRARY( hello_static ${LIBHELLO_SRC} )
SET_TARGET_PROPERTIES( hello_static PROPERTIES OUTPUT_NAME "hello")
GET_TARGET_PROPERTY( OUTPUT_VALUE hello_static OUTPUT_NAME )
MESSAGE( STATUS "This is the hello_static OUTpUT_NAME: " ${OUTPUT_VALUE} )
SET_TARGET_PROPERTIES( hello PROPERTIES CLEAN_DIRECT_OUTPUT 1 )
SET_TARGET_PROPERTIES( hello_static PROPERTIES CLEAN_DIRECT_OUPUT 1)
SET_TARGET_PROPERTIES( hello PROPERTIES VERSION 1.2 SOVERSION 1)

INSTALL( TARGETS hello hello_static LIBRARY DESTINATION lib
ARCHIVE DESTINATION lib)
INSTALL( FILES hello.h DESTINATION include/hello )
